# meander

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.github/: release.yml
.github/workflows/: pages.yml  release.yml
examples/: circle.rs  ellipse.rs  rect.rs
examples/wasm-browser/: README.md  index.html
src/: cli_output.rs  file_config.rs  lib.rs  main.rs  wasm.rs
src/args/: mod.rs
src/circle/: mod.rs
src/common/: mod.rs
src/config/: mod.rs
src/drawing/: mod.rs
src/ellipse/: mod.rs
src/rect/: mod.rs
tests/: integration.rs  visibility_test.rs
tests/compile_fail/: common_is_private.rs  common_is_private.stderr
