[package]
name = "greek-meander"
version = "0.1.4"
edition = "2024"
description = "A Rust crate for creating rectangle border design of Greek Key (Meander)."
license = "MIT"
repository = "https://github.com/bingqiao/meander"
keywords = ["greek-key", "meander", "svg", "rectangle", "circle"]
categories = ["multimedia::images"]

[[bin]]
name = "greek-meander"
required-features = ["native"]

[[example]]
name = "rect"
required-features = ["native"]

[[example]]
name = "circle"
required-features = ["native"]

[features]
default = ["native"]
native = ["dep:resvg", "dep:clap"]

[dev-dependencies]
trybuild = "1.0"

[dependencies]
clap = { version = "4.5.46", features = ["derive"], optional = true }
resvg = { version = "0.45.1", optional = true }
svg = "0.18.0"
